kubernetes/apps/network/chisel/oc/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: work-opencode
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
  hostnames:
    - work.opencode.goyangi.io
    - work.oc.goyangi.io
    - w.oc.goyangi.io
  rules:
    - filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            remove:
              - Content-Security-Policy
      backendRefs:
        - name: chisel
          port: 4097
